Fix badge positioning and visibility

--- a/src/App.css
+++ b/src/App.css
@@ -42,5 +42,5 @@
 }
 
 #montesite-footer-badge {
-  bottom: 126px !important;
+  bottom: 0px !important;
 }
